--- a/style.css
+++ b/style.css
@@ -12,13 +12,16 @@ body {
     -ms-user-select: none; /* Internet Explorer/Edge */
 }
 .container {
-    width: 60%;
+    width: 85%;
+
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     position: relative; /* Для кнопки возврата */
-    padding: 30px 15px;
+    padding: 40px 15px ;
+    margin-top: -50px;
+
 }
 .back-btn {
     position: absolute;
@@ -66,12 +69,13 @@ body {
     background-color: #005f99; /* Темнее при наведении */
 }
 img.logo {
-    max-width: 150px;
+    max-width: 100px;
     border: 2px solid #0088cc; /* Чёрная рамка */
     border-radius: 50%; /* Скругление углов */
 }
 h2 {
     color: #0088cc;
+    margin-top: -5px;
 }
 .custom-select {
     position: relative;
